<?xml version="1.0" encoding="utf-8"?>   
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:mobpartner="http://schemas.android.com/apk/lib/com.mobpartner.android.publisher"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000"
        android:orientation="vertical" >
        
        <!-- Admob layout -->
        <LinearLayout 
            android:id="@+id/layoutBanner" 
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="vertical"
	        android:gravity="center_horizontal|top">
	        
		</LinearLayout>
        
         <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="2"
	        android:orientation="vertical"
	        android:gravity="center_vertical|center_horizontal">
	        
            <ImageView 
                android:src="@drawable/logo"
                android:contentDescription="@string/interstitial_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
	        	android:adjustViewBounds="true" />
	        
        </LinearLayout>
        
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:orientation="horizontal"
	        android:gravity="center_vertical|center_horizontal">    
	        
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:paddingRight="10dp"
                android:textColor="#FFFFFF"
                android:text="@string/PoolID" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/demoPool"
                android:textColor="#FFFFFF"
                android:inputType="number" >

                <requestFocus />
            </EditText>
                
        </LinearLayout>
            
         
                    
        
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="2"
	        android:orientation="vertical"
	        android:gravity="top">
        
	        <Button
	            android:id="@+id/button1"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textSize="20sp"
			    android:textColor="#FFFFFF"
			    android:layout_marginLeft="80dp"
			    android:layout_marginRight="80dp"
			    android:onClick="interstitialShow"
			    android:text="@string/interstitial_show" />         
			    
	     	<Button
	            android:id="@+id/button2"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textSize="20sp"
			    android:textColor="#FFFFFF"
			    android:layout_marginLeft="80dp"
			    android:layout_marginRight="80dp"
			    android:onClick="refreshBanner"
			    android:text="@string/refresh_banner" />     
			    
	     	<Button
	            android:id="@+id/button3"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textSize="20sp"
			    android:textColor="#FFFFFF"
			    android:layout_marginLeft="80dp"
			    android:layout_marginRight="80dp"
			    android:onClick="mobwallShow"
			    android:text="@string/mobWall" /> 
			    
		</LinearLayout>
		    
        <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:gravity="bottom">
	        
	        <com.mobpartner.android.publisher.views.MobPartnerAdBanner
			    android:id="@+id/bannerdisplay"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="#999999" />         
        
    	</LinearLayout>
            
    </LinearLayout>
    
